US15523 - Overlay card docs Fix bug where overlapping header covers some of the body text.

--- a/assets/stylesheets/components/_cards.scss
+++ b/assets/stylesheets/components/_cards.scss
@@ -103,7 +103,6 @@
   font-size: 2.125rem;
   margin: -2rem -.5rem;
   padding: .25rem .5rem;
-  position: relative;
 
   .dark-theme & {
     background-color: $cr-black;
